API call execution and UI implementation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ravish.hilt.coroutines.retrofit.example">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:name=".HiltCoroutinesApplication"
         android:allowBackup="true"
@@ -11,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Hilt.coroutines.retrofit.example">
         <activity
-            android:name=".presentation.activity.MainActivity"
+            android:name=".presentation.activity.HomeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
