--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,15 +44,12 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation "com.google.dagger:hilt-android:$hilt_version"
-    implementation "androidx.navigation:navigation-fragment-ktx:$nav_graph"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_graph"
 
     //Network library
     implementation "com.google.code.gson:gson:2.8.6"
     implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.2"
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.1"
-    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
     implementation "com.github.bumptech.glide:glide:4.12.0"
 
